# hich-cli

./: .gitignore  environment.yml  hichDockerfile  pyproject.toml  requirements.txt  updateDocker.sh
hich/: __main__.py
hich/cli/: __init__.py  compartments.py  downsample.py  fragtag.py  hicrep.py  reshape.py  stats.py  stats_aggregate.py
hich/cli/util/: __init__.py  booleanlist.py  intlist.py  paramlist.py  pathlist.py  strlist.py
hich/commands/: __init__.py  stats.py
hich/compartments/: __init__.py
hich/digest/: __init__.py
hich/fragtag/: __init__.py  bedpe_pairs.py  frag_index.py  samheader_fragtag.py
hich/hicrep_combos/: __init__.py  hicrep_wrapper.py
hich/organize/: __init__.py
hich/pairs/: __init__.py
hich/parse/: alignment_splitter.py  annotation.py  file_splitter.py  pairs_file.py  pairs_header.py  pairs_parser.py  pairs_segment.py  pairs_splitter.py  pbgzip.py  seqio_splitter.py
hich/sample/: samheader_coverage.py  selection_sampler.py
hich/scool/: __init__.py  create_scool.py  scool_creator.py
hich/stats/: __init__.py  compute_pairs_stats.py  discrete_distribution.py  pairs_classifier.py
tests/: .coverage  test_cli_types.py  test_command_stats.py  test_discrete_distribution.py  test_pairs_classifier.py  test_pairs_columns.py  test_pairs_header.py  test_pairs_segment.py  utilities.py
